--- a/templates/pdf/pdfdownload.html.twig
+++ b/templates/pdf/pdfdownload.html.twig
@@ -3,21 +3,19 @@
 	<table border="1" id="tasksTable">
 		<thead>
 			<tr>
-				<th>Id</th>
-				<th>Nom</th>
-				<th>Description</th>
-				<th>Date effective</th>
-				<th>Catégorie</th>
+				<th>{{ task.name }}</th>
+				<th>{{ task.description }}</th>
+				<th>{{ task.dueAt | date('d/m/Y') }}</th>
+				<th>{{ task.tag.name }}</th>
 			</tr>
 		</thead>
 		<tbody>
 			{% if tasks is defined %}
 				{% for task in tasks %}
 					<tr>
-						<td>{{ task.id }}</td>
 						<td>{{ task.name }}</td>
 						<td>{{ task.description }}</td>
-						<td>{{ task.dueAt | date('d/m/Y H:i')}}</td>
+						<td>{{ task.dueAt | date('d/m/Y')}}</td>
 						<td>{{ task.tag.name }}</td>
 					</tr>
 				{% endfor %}
