--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,6 +28,21 @@
 			</button>
 		</div>
 
+		<div class="text-center mt-2 col-4">
+			{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+				<p>Vous etes connecté en tant que :
+					{{ app.user.email }}
+				</p>
+			{% endif %}
+		</div>
+
+		<div class="text-end mt-2 col-4">
+			{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+				<a class="btn btn-danger" href="{{ path("app_logout") }}">Logout</a>
+			{% endif %}
+		</div>
+
+
 		{% block body %}{% endblock %}
 	</body>
 
