--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -15,6 +15,16 @@
 	<div class="container">
 		<h1>{{'general.title.userList'|trans}}</h1>
 		<a href="{{ path('user_create') }}" class="btn btn-primary">{{'general.button.add'|trans}}</a>
+		<br><br>
+
+		{% for label, messages in app.flashes %}
+			{% for message in messages %}
+				<div class="alert alert-{{ label }}">
+					{{message|trans}}
+				</div>
+			{% endfor %}
+		{% endfor %}
+
 
 		<table class="table table-striped table-bordered" id="usersTable">
 			<thead>
@@ -57,16 +67,16 @@
 $('#usersTable').DataTable({
 
 language: {
-"sLengthMenu": "{% trans from 'messages' %}datatables.sLengthMenu                       {% endtrans %}",
-"sSearch": "{% trans from 'messages' %}datatables.sSearch                       {% endtrans %}",
-"sInfo": "{% trans from 'messages' %}datatables.sInfo                       {% endtrans %}",
-"sInfoEmpty": "{% trans from 'messages' %}datatables.sInfoEmpty                       {% endtrans %}",
+"sLengthMenu": "{% trans from 'messages' %}datatables.sLengthMenu                         {% endtrans %}",
+"sSearch": "{% trans from 'messages' %}datatables.sSearch                         {% endtrans %}",
+"sInfo": "{% trans from 'messages' %}datatables.sInfo                         {% endtrans %}",
+"sInfoEmpty": "{% trans from 'messages' %}datatables.sInfoEmpty                         {% endtrans %}",
 "sInfoFiltered": "(filtered from _MAX_ total records)",
 "paginate": {
-"first": "{% trans from 'messages' %}datatables.first                       {% endtrans %}",
-"previous": "{% trans from 'messages' %}datatables.previous                       {% endtrans %}",
-"next": "{% trans from 'messages' %}datatables.next                       {% endtrans %}",
-"last": "{% trans from 'messages' %}datatables.last                       {% endtrans %}"
+"first": "{% trans from 'messages' %}datatables.first                         {% endtrans %}",
+"previous": "{% trans from 'messages' %}datatables.previous                         {% endtrans %}",
+"next": "{% trans from 'messages' %}datatables.next                         {% endtrans %}",
+"last": "{% trans from 'messages' %}datatables.last                         {% endtrans %}"
 }
 }
 });
